--- a/Codebase/NYUCodebase/NYUCodebase.vcxproj
+++ b/Codebase/NYUCodebase/NYUCodebase.vcxproj
@@ -54,7 +54,7 @@
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /s ..\References\dll ..\Debug\</Command>
+      <Command>xcopy /s/y ..\References\dll ..\Debug\</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
